# textsearcher-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
