[package]
name = "textsearcher"
version = "0.2.0"
edition = "2021"

[lib]
name = "textsearcher"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rayon = "1.7.0"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
